tests/fixtures/invalid/round_dict.py
# Cannot call round() with Dict[str, int]
x = round({"a": 1})
